# ReceivingApp

./: .env.example  .gitignore  DEBT.md  MUTATION.md  README.md  __init__.py  __main__.py  config.py  pyproject.toml  requirements.txt  scanner_runner.py
adapters/: __init__.py  board.py  db.py  portal_dom.py  printer.py  receiver.py  scanner.py  sink.py  sync_status_db.py
adapters/ui/: __init__.py  controller.py  scan_states.py  scanner_ui.py
core/: __init__.py  errors.py  logging_setup.py  matching.py  ports.py  schema.py
docs/: FOR_DEVELOPERS.md  GETTING_STARTED.md
schema/: 0001_init.sql
services/: __init__.py  populate.py  receive.py  receive_sync.py  refresh.py  sync.py
tests/: __init__.py  test_board.py  test_board_contract.py  test_config.py  test_config_conditional_creds.py  test_controller.py  test_db.py  test_logging_setup.py  test_matching.py  test_printer.py  test_receive_already_scanned.py  test_receive_sync.py  test_receiver.py  test_robot_runner.py  test_scan_states.py  test_schema.py  test_sequence_matcher.py  test_sink.py  test_sync.py  test_sync_status_db.py
tests/fakes/: __init__.py  fake_db.py  fake_printer.py  fake_sink.py  fake_source.py
