[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "receiving-app"
version = "0.1.0"
description = "Generic warehouse receiving application"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv",
    "pywin32",
    "playwright",
    "selenium",
]
